--- a/style.css
+++ b/style.css
@@ -25,17 +25,31 @@ body {
     width: 15%;
     min-height: 150px;
     border: 2px solid black;
-    background-color: gray;
     margin: 10px;
     border-radius: 5px;
+    font-size: 3em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
 }
 
 /* Category Boxes */
 .category {
+    display: flex;
     background-color: blue;
+    font-size: 3em;
+    justify-content: space-around;
+    color: white;
+}
+
+.cat-1-item, .cat-2-item, .cat-3-item, .cat-4-item, .cat-5-item {
+    align-self: center;
+    text-align: center;
 }
 
 /* Question Boxes */
 .question-box {
     background-color: rgb(32, 92, 255);
 }
+
