--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     background-color: aliceblue;
+    background-image: url(/images/howard-bouchevereau-C1H6FOwTspI-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #header {
@@ -15,7 +18,7 @@ body {
     align-self: center;
     justify-content: space-evenly;
     align-items: center;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.5);
     border: 2px solid black;
     border-radius: 5px;
     width: 450px;
@@ -46,12 +49,13 @@ body {
 #game-board-container {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 100px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     width: 90%;
     height: auto;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.7);
     border: 2px solid black;
     border-radius: 5px;
     padding: 10px;
@@ -147,3 +151,14 @@ body {
     align-items: baseline;
 }
 
+
+/* screens smaller than 1500px wide */
+@media screen and (max-width: 1500px) {
+    #question-text {
+        display: flex;
+        font-size: 1em;
+        justify-content: space-around;
+        color: white;
+        margin-bottom: 60px;
+    }
+}
