--- a/style.css
+++ b/style.css
@@ -6,17 +6,49 @@ body {
 }
 
 #header {
+    width: 50%;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    background-color: rgba(128, 128, 128, 0.5);
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-top: 40px;
 }
 
-#navigation {
-    display: inline-block;
+h1 {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 4em;
+    justify-self: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+}
+
+#start-button {
+    align-self: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 40px;
+    width: 10%;
+}
+
+#restart-button {
+    align-self: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 40px;
+    width: 10%;
 }
 
 #scoreboard-container {
     display: flex;
     align-self: center;
     justify-content: space-evenly;
+    justify-self: center;
     align-items: center;
     background-color: rgba(128, 128, 128, 0.5);
     border: 2px solid black;
