--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     margin-left: 10px;
 }
 
-#start-button, #restart-button {
+#start-button, #game-rules {
     align-self: center;
     margin-left: 10px;
     margin-right: 10px;
