--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1 {
     justify-content: space-evenly;
     justify-self: center;
     align-items: center;
-    background-color: rgba(128, 128, 128, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     border: 2px solid black;
     border-radius: 5px;
     width: 450px;
@@ -187,12 +187,90 @@ h1 {
 
 
 /* screens smaller than 1500px wide */
-@media screen and (max-width: 1500px) {
-    #question-text {
-        display: flex;
+@media (max-width: 1500px) {
+    #scoreboard-text, #score-to-beat-text {
+        font-size: 1.5em;
+    }
+        
+    .board-item {
+        width: 15%;
+        min-height: 100px;
+        font-size: 2em;
+    }
+
+}
+
+
+/* Screen width under 1000px */
+@media (max-width: 1000px) {
+    #header {
+        width: 90%;
+    }
+
+    #scoreboard-text, #score-to-beat-text {
+        font-size: 1.5em;
+    }
+        
+    .board-item {
+        width: 13%;
+        min-height: 100px;
         font-size: 1em;
-        justify-content: space-around;
-        color: white;
-        margin-bottom: 60px;
     }
 }
+
+/* Screen width under 750px */
+@media (max-width: 750px) {
+    .board-item {
+        width: 11%;
+        min-height: 75px;
+    }
+}
+
+/* screen width under 600px */
+@media (max-width: 600px) {
+    #scoreboard-text, #score-to-beat-text {
+        font-size: .8em;
+    }
+        
+    .board-item {
+        width: 10%;
+        min-height: 50px;
+        font-size: .8em;
+    }
+}
+
+/* Screen width under 400px */
+@media (max-width: 400px) {
+    #scoreboard-text, #score-to-beat-text {
+        font-size: .5em;
+    }
+    
+    h1 {
+        font-size: 2em;
+        align-self: center;
+    }
+
+    .board-item {
+        width: 6%;
+        min-height: 30px;
+        font-size: .6em;
+    }
+
+    #start-button, #game-rules {
+        margin-left: 1px;
+        margin-right: 1px;
+        height: 30px;
+        width: 12%;
+        font-size: 10px;
+    }
+    
+    #scoreboard-container {
+        width: 450px;
+        height: 75px;
+    }
+    
+    #scoreboard-item, #score-to-beat-item {
+        font-size: 1.5em;
+    }
+}
+
